@@ -98,6 +98,7 @@ types for pint-pandas compatibility. (#1596)
   setitem (Issue #1584)
 
 - Add Quantity.to_preferred
+- Better support for uncertainties (See #1611, #1614)
 
 0.19.2 (2022-04-23)
 -------------------
